--- a/shelter/styles/main.css
+++ b/shelter/styles/main.css
@@ -51,15 +51,23 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     padding: 0px 15px;
     box-sizing: content-box;
 } 
+@media (max-width: 830px) {
+    ._container {
+        max-width: 708px;
+    }
+}
+@media (max-width: 740px) {
+    ._container {
+        max-width: 300px;
+    }
+}
 .main {
     flex: 1 1 auto;
 }
 /*----------------------------------HEADER----------------------------------*/
 .header { 
-    position: absolute;
-    top: 30px;
-    left: 40px;
-    min-width: 1200px;
+    z-index: 2;
+    padding: 30px 15px 0px;
 }
 .header__container { 
     max-height: 60px;
@@ -67,8 +75,14 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     justify-content: space-between;
     align-items: center;
 }
+@media (max-width: 740px) {
+    .header__container {
+        position: relative;
+        max-width: 280px;
+    }
+}
 .header__logo { 
-
+    margin-right: 50px;
 }
 .logo__link { 
     
@@ -81,13 +95,47 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     margin-bottom: 10px;
 }
 .logo__text { 
+    color: #FFFFFF;
     font-family: Arial;
     font-size: 13px;
     line-height: 115%;
     letter-spacing: 0.1em;
 }
+.burger__menu {
+    display: none;
+}
+.burger__menu::before,
+.burger__menu::after {
+    content: '';
+    background-color: #F1CDB3;
+    width: 30px;
+    height: 2px;
+    display: inline-block;
+    position: absolute;
+}
+.burger__menu::before {
+    margin-top: -10px;
+}
+.burger__menu::after {
+    margin-top: 10px;
+}
+@media (max-width: 740px) {
+    .burger__menu {
+        display: block;
+        background-color: #F1CDB3;
+        width: 30px;
+        height: 2px;
+        position: absolute;
+        right: 20px;
+    }
+}
 .menu { 
 
+}
+@media (max-width: 740px) {
+    .menu {
+        display: none;
+    }
 }
 .menu__list { 
     display: flex;
@@ -118,4 +166,101 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     position: absolute;
     top: 24px;
     left: 0px;
+}
+
+/*----------------------------------START----------------------------------*/
+.start { 
+    background: url(noise_lines_transparent@2X.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+    margin-top: -90px;
+}
+.start__container { 
+    padding-top: 180px;
+    display: flex;
+    justify-content: space-between;
+}
+@media (max-width: 830px) {
+    .start__container {
+        flex-direction: column;
+        padding-top: 150px;
+        margin: auto;
+    }
+}
+.start__body { 
+    padding-top: 163px;
+}
+@media (max-width: 830px) {
+    .start__body {
+        padding-top: 0px;
+        padding-bottom: 100px;
+        margin-right: auto;
+        margin-left: auto;
+        
+    }
+}
+
+.start__title { 
+    color: #FFFFFF;
+    font-size: 44px;
+    line-height: 130%;
+    max-width: 310px;
+    margin-bottom: 42px;
+}
+@media (max-width: 740px) {
+    .start__title {
+        font-size: 25px;
+        letter-spacing: 0.06em;
+        text-align: center;
+        max-width: 200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+.start__description { 
+    font-family: Arial;
+    font-size: 15px;
+    line-height: 160%;
+    color: #CDCDCD;
+    max-width: 460px;
+    margin-bottom: 42px;
+}
+@media (max-width: 740px) {
+    .start__description {
+        text-align: center;
+    }  
+}
+.start__button { 
+
+}
+@media (max-width: 830px) {
+    .start__button {
+        margin: auto;
+        max-width: 208px;
+    }
+}
+.page__button { 
+    color: #292929;
+    font-size: 17px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    padding: 15px 45px;
+    background: #F1CDB3;
+    border-radius: 100px;
+}
+.start__image { 
+    
+}
+@media (max-width: 830px) {
+    .start__image {
+        margin-left: 170px;
+    }
+}
+@media (max-width: 740px) {
+    .start__image {
+        margin-left: 50px;
+    }
+}
+.start__image img {
+    max-width: 100%;
+    
 }
