--- a/shelter/styles/main.css
+++ b/shelter/styles/main.css
@@ -350,3 +350,133 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .about__description:last-child {
     margin-bottom: 0px;
 }
+
+/*----------------------------------PETS----------------------------------*/
+.pets { 
+    background-color: #F6F6F6;
+}
+.pets__container { 
+    padding: 80px 0px 100px;
+}
+@media (max-width: 740px) {
+    .pets__container {
+        padding: 42px 0px;
+    }
+}
+.page__title { 
+    color: #545454;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+}
+@media (max-width: 740px) {
+    .page__title {
+        font-size: 25px;
+    }
+}
+.pets__title { 
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.pets__body {
+    display: flex;
+    align-items: center;
+}
+@media (max-width: 740px) {
+    .pets__body {
+        position: relative;
+    }
+}
+.pets__arrow { 
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+    padding: 21px 17px;
+}
+@media (max-width: 740px) {
+    .pets__arrow {
+        position: absolute;
+        top: 497px;
+        left: 58px;
+    }
+}
+@media (max-width: 740px) {
+    .pets__arrow:last-child {
+       left: 190px;
+    }
+}
+.pets__arrow img {
+    max-width: 100%;
+    display: block;
+}
+.pets__cards { 
+    display: flex;
+    gap: 0px 90px;
+    padding: 60px 53px;
+}
+@media (max-width: 830px) {
+    .pets__cards {
+        gap: 0px 40px;
+        padding: 60px 12px;
+    }
+}
+@media (max-width: 740px) {
+    .pets__cards {
+        padding: 42px 15px 20px;
+    }
+}
+.card__item { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FAFAFA;
+}
+@media (max-width: 830px) {
+    .card__item:last-child {
+        display: none;
+    }
+}
+@media (max-width: 740px) {
+    .card__item:nth-child(2) {
+        display: none;
+    }
+}
+.card__image { 
+    margin-bottom: 30px;
+    
+}
+.card__image img {
+    max-width: 100%;
+}
+.card__title { 
+    margin-bottom: 30px;
+    font-size: 20px;
+    color: #545454;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    
+}
+
+.card__button button { 
+    margin-bottom: 30px;
+    color: #292929;
+    font-size: 17px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    padding: 13px 43px;
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+    background: transparent;
+}
+.pets__button { 
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 262px;
+}
+@media (max-width: 740px) {
+    .pets__button {
+        margin-top: 114px;
+    }
+}
