add donation block

--- a/shelter/styles/main.css
+++ b/shelter/styles/main.css
@@ -554,3 +554,123 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     }
 }
 /*----------------------------------DONATION----------------------------------*/
+.donation { 
+    background-color: #F6F6F6;
+}
+.donation__container { 
+    padding: 80px 183px 100px;
+    display: flex;
+    align-items: center;
+}
+@media (max-width: 830px) {
+    .donation__container {
+        flex-direction: column;
+    }
+}
+@media (max-width: 740px) {
+    .donation__container {
+        padding: 42px 0px;
+    }
+}
+.donation__image { 
+    flex: 0 1 57%;
+}
+@media (max-width: 830px) {
+    .donation__image {
+        order: 2;
+    }
+}
+@media (max-width: 740px) {
+    .donation__image {
+        padding: 0px 20px;
+    }
+}
+.donation__image img {
+    max-width: 100%;
+}
+.donation__content { 
+    flex: 0 1 43%;
+}
+@media (max-width: 830px) {
+    .donation__content {
+        order: 1;
+        margin-bottom: 60px;
+        max-width: 380px;
+        
+    }
+}
+@media (max-width: 740px) {
+    .donation__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 42px;
+    }
+}
+.donation__title { 
+    padding-right: 80px;
+    margin-bottom: 20px;
+}
+@media (max-width: 740px) {
+    .donation__title {
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 0px 40px;
+    }
+}
+.donation__subtitle { 
+    color: #545454;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 20px;
+}
+@media (max-width: 740px) {
+    .donation__subtitle {
+        line-height: 160%;
+        letter-spacing: 0px;
+        padding: 0px 13px;
+    }
+}
+.donation__credit-card { 
+    background: #F1CDB3;
+    border-radius: 9px;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+.credit-card__link { 
+    display: inline-block;
+    color: #545454;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    padding: 10px 15px 10px 60px;
+    position: relative;
+}
+@media (max-width: 740px) {
+    .credit-card__link {
+        font-size: 15px;
+        line-height: 110%;
+        padding: 13px 15px 13px 60px;
+    }
+}
+.credit-card__link::before {
+    content: url(../assets/icons/creditCard.svg);
+    position: absolute;
+    top: 10px;
+    left: 15px;
+}
+.donation__text { 
+    color: #B2B2B2;
+    font-family: Arial;
+    font-style: italic;
+    font-size: 12px;
+    line-height: 150%;
+}
+@media (max-width: 740px) {
+    .donation__text {
+        text-align: justify;
+        padding: 0px 10px;
+    }
+}
