--- a/shelter/styles/main.css
+++ b/shelter/styles/main.css
@@ -596,7 +596,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
         order: 1;
         margin-bottom: 60px;
         max-width: 380px;
-        
     }
 }
 @media (max-width: 740px) {
@@ -673,4 +672,108 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
         text-align: justify;
         padding: 0px 10px;
     }
+}
+/*----------------------------------FOOTER----------------------------------*/
+.footer { 
+    background: url(noise_lines_transparent@2X.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+}
+.footer__container { 
+    padding: 40px 0px 0px;
+    display: flex;
+    gap: 0px 158px;
+    align-items: flex-end;
+}
+@media (max-width: 830px) {
+    .footer__container {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 65px 60px;
+        padding: 30px 34px 0px;
+    }
+}
+@media (max-width: 740px) {
+    .footer__container {
+        padding: 30px 0px 0px;
+        gap: 40px 0px;
+    }
+}
+.footer__contacts { 
+    padding: 0px 0px 60px;
+}
+@media (max-width: 830px) {
+    .footer__contacts {
+        flex: 0 1 40%;
+        padding: 0px;
+    }
+}
+@media (max-width: 740px) {
+    .footer__contacts {
+        flex: 0 1 auto;
+        padding: 0px;
+    }
+}
+.contacts__title { 
+    color: #FFFFFF;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+}
+@media (max-width: 740px) {
+    .contacts__title {
+        font-size: 25px;
+        text-align: center;
+        padding: 0px 15px;
+    }
+}
+.contacts__item a { 
+    color: #F1CDB3;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    display: inline-block;
+    
+}
+.contacts__item {
+    position: relative;
+    padding: 5px 0px 5px 60px;
+}
+.footer__image img { 
+    max-width: 100%;
+    display: block;
+}
+.footer__image {
+    flex: 0 1 33.333%;
+}
+@media (max-width: 740px) {
+    .footer__image {
+        flex: 0 1 auto;
+    }
+}
+.contacts__email {
+    margin-top: 40px;
+}
+.contacts__email::before {
+    content: url(../assets/icons/email.svg);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.contacts__phone {
+    margin-top: 40px;
+}
+.contacts__phone::before {
+    content: url(../assets/icons/phone.svg);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.contacts__map::before {
+    content: url(../assets/icons/marker.svg);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.contacts__map {
+    margin-top: 34px;
+    padding: 5px 0px 5px 42px;
 }
