--- a/shelter/styles/main.css
+++ b/shelter/styles/main.css
@@ -431,6 +431,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     flex-direction: column;
     align-items: center;
     background-color: #FAFAFA;
+    border-radius: 9px;
 }
 @media (max-width: 830px) {
     .card__item:last-child {
